@@ -1,3 +1,8 @@
+2016-10-01  Patrick Uiterwijk  <puiterwijk@redhat.com>
+
+	* src/utils.py (nss_init): Check whether NSS password is correct on
+	startup (RHBZ#991154)
+
 2016-09-30  Patrick Uiterwijk  <puiterwijk@redhat.com>
 
 	* src/utils.py (string_is_safe): Add checking for filename safety.
